# game-gem

./: Cargo.toml  LICENSE  README.md
examples/: basics.rs  particles.rs  scene_demo.rs
src/: animation.rs  assets.rs  audio.rs  camera.rs  collision.rs  color.rs  engine.rs  input.rs  lib.rs  particles.rs  prelude.rs  scene.rs  time.rs  tween.rs
src/math/: angle.rs  lerp.rs  mod.rs  rect.rs  transform.rs
src/ui/: mod.rs
